<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:gravity="center_horizontal|center"
        android:padding="5dp"
        android:text="@string/basketball_match_points"
        android:textSize="24sp"
        tools:background="@color/colorPrimaryDark" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="resetScores"
        android:text="@string/reset"
        android:background="@color/OrangeMr"
        android:layout_margin="15dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="true"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/player_1"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/team_a_scoreA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/_0"
                android:textSize="56sp" />

            <Button
                android:background="@color/OrangeMr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="scoreFreeThrow"
                android:text="@string/free_throw" />

            <Button
                android:background="@color/OrangeMr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="scoreTwo"
                android:text="@string/_2_points" />

            <Button
                android:background="@color/OrangeMr"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="scoreThree"
                android:text="@string/_3_points"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:layout_weight="1">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/player_2"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/team_a_scoreB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/_0"
                android:textSize="56sp"
                />

            <Button
                android:background="@color/OrangeMr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="scoreFreeThrowB"
                android:text="@string/free_throw"
                android:textColor="@android:color/background_dark" />

            <Button
                android:background="@color/OrangeMr"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="scoreTwoB"
                android:text="@string/_2_points" />

            <Button
                android:background="@color/OrangeMr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="scoreThreeB"
                android:text="@string/_3_points" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>